--- a/src/widgets/worksSection/ui/workPreview/workPreview.scss
+++ b/src/widgets/worksSection/ui/workPreview/workPreview.scss
@@ -112,7 +112,7 @@
 
     .comments {
         gap: 16px;
-        padding: 16px 16px 83px;
+        // padding: 16px 16px 83px;
         border-top: 1px solid;
         overflow-y: scroll;
 
